Fix spacing in music page

--- a/assets/style.css
+++ b/assets/style.css
@@ -403,7 +403,7 @@ audio {
 #watch-more-button-container {
     width: 100%;
     text-align: center;
-    margin: 0 auto 0px auto;
+    margin: 0 auto 30px auto;
 }
 
 #watch-more-button {
